--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     font-family: 'xkcd-Regular';
     src: url('https://github.com/ChekinNooget/public-notes/raw/main/xkcd-regular-webfont.woff');
 }
+      body{
+          font-family:xkcd-Regular;}
   </style>
 <body>
     hello
