--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>
   @font-face {
     font-family: 'xkcd-Regular';
-    src: url('https://github.com/ChekinNooget/public-notes/raw/main/xkcd-regular-webfont.woff');
+    src: url('../xkcd-regular-webfont.woff');
 }
       body{
           font-family:xkcd-Regular;}
