--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
   <style>
-  @font-face {
-    font-family: 'xkcd-Regular';
-    src: url('../xkcd-regular-webfont.woff');
-}
-      body{
-          font-family:xkcd-Regular;}
+    @font-face {
+      font-family: "xkcd-Regular";
+      src: url("../xkcd-regular-webfont.woff");
+    }
+    body {
+      font-family: xkcd-Regular;
+    }
   </style>
-<body>
+  <body>
     hello
-</body>
+  </body>
 </html>
