--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>
     @font-face {
       font-family: "xkcd-Regular";
-      src: url("../xkcd-regular-webfont.woff");
+      src: url("ChekinNoogetBold.ttf");
     }
     body {
       font-family: xkcd-Regular;
